unpackaged/main/default/objects/BeBack__c/BeBack__c.object-meta.xml
<CustomObject>
    <label>Prospect Note</label>
    <nameField>
        <label>Prospect Note</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospect Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>