unpackaged/main/default/objects/BeBack__c/fields/Community_of_Interest__c.field-meta.xml
<CustomField>
        <fullName>Community_of_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interestested community</label>
        <referenceTo>Interest_List__c</referenceTo>
        <relationshipLabel>Prospect Notes</relationshipLabel>
        <relationshipName>BeBack</relationshipName>
        <type>Lookup</type>
    </CustomField>