unpackaged/main/default/objects/BeBack__c/fields/Is_Be_Back__c.field-meta.xml
<CustomField>
        <fullName>Is_Be_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Be Back</label>
        <type>Checkbox</type>
    </CustomField>