unpackaged/main/default/objects/BeBack__c/fields/Notes__c.field-meta.xml
<CustomField>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>