unpackaged/main/default/objects/BeBack__c/fields/Opportunity__c.field-meta.xml
<CustomField>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Prospect Notes</relationshipLabel>
        <relationshipName>Prospect_Notes</relationshipName>
        <type>Lookup</type>
    </CustomField>