unpackaged/main/default/objects/BeBack__c/fields/Visit_Date__c.field-meta.xml
<CustomField>
        <fullName>Visit_Date__c</fullName>
        <label>Entry Date</label>
        <required>true</required>
        <type>Date</type>
    </CustomField>